# OpenRepairPlatform

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.rst  bootstrap.py  cpdb.sh  les_questions_techniques.rst  manage.py  package-lock.json  requirements.txt  setup.cfg  start.sh
api/: views.py
ateliersoude/: assets.py  celery.py  conftest.py  context_processors.py  factories.py  mixins.py  urls.py  utils.py  validators.py  views.py  wsgi.py
ateliersoude/api/: urls.py  views.py
ateliersoude/event/: admin.py  factories.py  forms.py  mixins.py  models.py  urls.py  views.py
ateliersoude/location/: admin.py  api_urls.py  api_views.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
ateliersoude/plateformeweb/: __init__.py  apps.py  models.py  tasks.py  urls.py  views.py
ateliersoude/settings/: __init__.py  base.py  common.py  dev.py  preprod.py  prod.py  test.py  tests.py
ateliersoude/templates/: base.html  detail_view.html  home.html  menu.html
ateliersoude/tests/: test_location.py  test_mixins.py  test_models.py  test_utils.py
ateliersoude/user/: admin.py  apps.py  factories.py  forms.py  mixins.py  models.py  urls.py  views.py
ateliersoude/users/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
deployment/: docker-compose.yml
deployment/docker-app/: Dockerfile  ateliersoude.cron  requirements.txt  (+1 more)
plateformeweb/: admin.py  context_processors.py  models.py  rules.py  views.py
templates/: base.html  detail_view.html  feed.html  list_view.html  menu.html
users/: forms.py  models.py  urls.py  views.py
(+153 files in other folders)
