[metadata]
name = ateliersoude
version = 0.0.1
author = Hashbang
url = https://gitlab.com/hashbangfr/ateliersoude



[tool:pytest]
DJANGO_SETTINGS_MODULE = ateliersoude.settings.tests
addopts = --reuse-db --cov-report xml --cov-report term-missing --cov=bedinshop --disable-pytest-warnings --flake8

[flake8]                       
exclude = ./*/migrations/*,venv

[coverage:run]                 
omit = */wsgi.py,              
       manage.py,
       */conftest.py,          
       */migrations/*,
       */tests/*,
       */admin.py,             
       */settings/*,           
       */urls.py,              
       */assets.py,              
       */app/apps.py

[options]
packages = find:
install_requires =
    django
    lxml
    weasyprint
    django-simple-history
    django-fm
    djangorestframework
    psycopg2
    django-debug-toolbar

tests_require =
    factory-boy
    pytest-cov
    pytest-flake8
    pytest-django
    diff_cover
    pytest-factoryboy

[options.extras_require]
test =
    factory-boy
    pytest-cov
    pytest-flake8
    pytest-django
    pytest-factoryboy
    diff_cover

